fix: hero buttons should always be visible

--- a/sass/_hero.sass
+++ b/sass/_hero.sass
@@ -1,7 +1,7 @@
 @use "_base" as *
 
 #hero
-  height: 70vh
+  height: 500px
   padding: 1em 0
   margin-bottom: 2em
   position: relative
